---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: 2020-11-23
  Changes:
    - Updated to Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2020-11-15
  Changes:
    - Updated deprecated require path for flib data-util module
    - Updated German translation (by Moonsilence)
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2020-09-02
  Features:
    - Added setting to disable the "alternate name" in object tooltips
    - Added `usable in` list to the material page, listing the labs that that science pack is usable in
    - Added crafting speed and crafting categories to crafter tooltips
    - Added category, crafting time, ingredients, and products to recipe tooltips
  Changes:
    - Characters are now properly detected and included as crafters, instead of being hard-coded
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2020-08-30
  Features:
    - Added stack size to item tooltips
    - Added `pumped by` to material page, which lists offshore pumps that produce that fluid
    - Added `rocket launch payloads` and `rocket launch products` to material page
    - Added rocket silos as crafters
      - Rocket silo crafters will display their required amount of rocket parts in their label and tooltip
    - Added fixed recipe to crafter tooltip if it has one
      - Shift + clicking a crafter with a fixed recipe will open that recipe's page
    - Added `purge-memoizer-cache` argument to the `/RecipeBook` command
  Changes:
    - Known "meta-recipes" (such as transport drones recipes used for requests) will no longer affect object availability