@@ -5,7 +5,7 @@
       "type": "factoriomod",
       "request": "launch",
       "name": "Debug",
-      "factorioPath": "${env:factorioSourceRelease}",
+      "factorioPath": "${env:factorioTestbench1}",
       "hookMode": "debug",
       "hookControl": ["RecipeBook", "Sandbox"],
       "factorioArgs": ["--load-scenario", "EditorExtensions/testing"]
@@ -14,7 +14,7 @@
       "type": "factoriomod",
       "request": "launch",
       "name": "Debug (data)",
-      "factorioPath": "${env:factorioSourceRelease}",
+      "factorioPath": "${env:factorioTestbench1}",
       "hookMode": "debug",
       "hookControl": ["RecipeBook", "Sandbox"],
       "hookData": true,
@@ -25,7 +25,7 @@
       "type": "factoriomod",
       "request": "launch",
       "name": "Profile",
-      "factorioPath": "${env:factorioSourceRelease}",
+      "factorioPath": "${env:factorioTestbench1}",
       "hookMode": "profile",
       "hookControl": ["RecipeBook", "Sandbox"]
     }
